--- a/jobsheet/10/10 - Array 1 (Argya Wicaksana).ipynb
+++ b/jobsheet/10/10 - Array 1 (Argya Wicaksana).ipynb
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Tulis Kode program Percobaan 1 Langkah 2 di atas\n"
+    "int[] bil=new int[4];\n"
    ]
   },
   {
@@ -42,11 +42,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// Tulis Kode program Percobaan 1 Langkah 3 di atas\n"
+    "bil[0]=5;\n",
+    "bil[1]=12;\n",
+    "bil[2]=7;\n",
+    "bil[3]=20;"
    ]
   },
   {
@@ -59,11 +73,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "12\n",
+      "7\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
-    "// Tulis Kode program Percobaan 1 Langkah 4\n"
+    "System.out.println(bil[0]);\n",
+    "System.out.println(bil[1]);\n",
+    "System.out.println(bil[2]);\n",
+    "System.out.println(bil[3]);"
    ]
   },
   {
@@ -75,12 +103,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "// Tulis Jawaban no 1 disini\n"
+    "terbesar=3\n",
+    "terkecil=0"
    ]
   },
   {
@@ -96,7 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Tulis Jawaban no 2 yang disini\n"
+    "akan eror, karena variabel bil menggunakan tipe data integer,\n",
+    "dimana integer itu hanya untuk bilangan bulat"
    ]
   },
   {
@@ -109,12 +137,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "// Tulis Jawaban no 3 yang disini\n"
+    "sama seperti langkah no 3. bil[i], \n",
+    "berarti menampilkan indeks ke-i"
    ]
   },
   {
@@ -136,11 +163,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Tulis Kode program Percobaan 2 Langkah 2 di atas\n"
+    "import java.util.Scanner;\n",
+    "Scanner sc=new Scanner(System.in);"
    ]
   },
   {
@@ -153,11 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Tulis Kode program Percobaan 2 Langkah 3 di atas\n"
+    "int[] nilaiUAS = new int[6];"
    ]
   },
   {
@@ -170,13 +198,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "masukkan nilai UAS ke-0: 100\n",
+      "masukkan nilai UAS ke-1: 100\n",
+      "masukkan nilai UAS ke-2: 100\n",
+      "masukkan nilai UAS ke-3: 100\n",
+      "masukkan nilai UAS ke-4: 100\n",
+      "masukkan nilai UAS ke-5: 100\n"
+     ]
+    }
+   ],
    "source": [
-    "// Tulis Kode program Percobaan 2 Langkah 4 di atas\n"
+    "for(int i=0; i<6; i++){\n",
+    "    System.out.print(\"masukkan nilai UAS ke-\"+i+\": \");\n",
+    "    nilaiUAS[i]=sc.nextInt();\n",
+    "}\n"
    ]
   },
   {
@@ -189,13 +233,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nilai UAS ke-0 adalah: 100\n",
+      "Nilai UAS ke-1 adalah: 100\n",
+      "Nilai UAS ke-2 adalah: 100\n",
+      "Nilai UAS ke-3 adalah: 100\n",
+      "Nilai UAS ke-4 adalah: 100\n",
+      "Nilai UAS ke-5 adalah: 100\n"
+     ]
+    }
+   ],
    "source": [
-    "// Tulis Kode program Percobaan 2 Langkah 5 di atas\n"
+    "for(int i=0; i<6; i++){\n",
+    "    System.out.println(\"Nilai UAS ke-\"+i+\" adalah: \"+ nilaiUAS[i]);\n",
+    "}\n"
    ]
   },
   {
@@ -209,12 +268,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "// Tulis Jawaban nomor 1 disini\n"
+    "karena terdapat nilaiUAS.length, maksudnya adalah \n",
+    "panjang ATAU BANYAK dari array nilaiUAS. disini banyaknya array\n",
+    "nilaiUAS adalah 6, maka sama saja seperti i<6\n"
    ]
   },
   {
@@ -230,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Tulis Jawaban nomor 2 disini\n"
+    "untuk mengetahui panjang elemen dari nilaiUAS"
    ]
   },
   {
@@ -244,11 +303,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mahasiswa ke-0 lulus\n",
+      "mahasiswa ke-1 lulus\n",
+      "mahasiswa ke-2 lulus\n",
+      "mahasiswa ke-3 lulus\n",
+      "mahasiswa ke-4 lulus\n",
+      "mahasiswa ke-5 lulus\n"
+     ]
+    }
+   ],
    "source": [
-    "// Tulis Jawaban nomor 3 disini\n"
+    "for(int i=0; i<nilaiUAS.length; i++){\n",
+    "    if(nilaiUAS[i]>70){\n",
+    "        System.out.println(\"mahasiswa ke-\"+i+\" lulus\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "//mula\" nilai i=0, jika i lebih dari 70, print mahasiswa ke-i lulus,\n",
+    "//lalu i akan bertambah 1. jika tidak, tidak akan diprint, hanya i yang bertambah 1"
    ]
   },
   {
@@ -265,11 +344,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Tulis Kode program Percobaan 3 Langkah 1 di atas, disini\n"
+    "import java.util.Scanner;\n",
+    "Scanner sc = new Scanner(System.in);"
    ]
   },
   {
@@ -282,11 +362,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Tulis Kode program Percobaan 3 Langkah 2 di atas, disini\n"
+    "int nilaiMHS[] =new int[10];\n",
+    "double total;\n",
+    "double rata;"
    ]
   },
   {
@@ -299,11 +381,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "masukkan nilai mahasiswa ke-1:100\n",
+      "masukkan nilai mahasiswa ke-2:100\n",
+      "masukkan nilai mahasiswa ke-3:100\n",
+      "masukkan nilai mahasiswa ke-4:100\n",
+      "masukkan nilai mahasiswa ke-5:100\n",
+      "masukkan nilai mahasiswa ke-6:100\n",
+      "masukkan nilai mahasiswa ke-7:100\n",
+      "masukkan nilai mahasiswa ke-8:100\n",
+      "masukkan nilai mahasiswa ke-9:100\n",
+      "masukkan nilai mahasiswa ke-10:100\n"
+     ]
+    }
+   ],
    "source": [
-    "// Tulis Kode program Percobaan 3 Langkah 3 di atas, disini\n"
+    "for(int i=0; i<nilaiMHS.length; i++){\n",
+    "    System.out.print(\"masukkan nilai mahasiswa ke-\"+(i+1)+\":\");\n",
+    "    nilaiMHS[i]=sc.nextInt();\n",
+    "}"
    ]
   },
   {
@@ -316,11 +418,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Tulis Kode program Percobaan 3 Langkah 4 di atas, disini\n"
+    "for(int i=0; i<nilaiMHS.length; i++){\n",
+    "    total+=nilaiMHS[i];\n",
+    "    //System.out.println(total);\n",
+    "}"
    ]
   },
   {
@@ -333,11 +438,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rata-rata nilai mahasiswa adalah 100.0\n"
+     ]
+    }
+   ],
    "source": [
-    "// Tulis Kode program Percobaan 3 Langkah 3 di atas, disini\n"
+    "rata= total/nilaiMHS.length;\n",
+    "System.out.println(\"rata-rata nilai mahasiswa adalah \"+rata);"
    ]
   },
   {
@@ -349,12 +463,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "// Tulis jawaban no 1 disini\n"
+    "jika ditaruh di dalam perulangan, maka perhitungannya akan dilakukan\n",
+    "sebanyak panjang dari array nilaiMHS (10). dan itu kurang efektif"
    ]
   },
   {
@@ -368,11 +481,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "masukkan nilai mahasiswa ke-1:90\n",
+      "masukkan nilai mahasiswa ke-2:80\n",
+      "masukkan nilai mahasiswa ke-3:100\n",
+      "masukkan nilai mahasiswa ke-4:70\n",
+      "masukkan nilai mahasiswa ke-5:60\n",
+      "masukkan nilai mahasiswa ke-6:40\n",
+      "masukkan nilai mahasiswa ke-7:50\n",
+      "masukkan nilai mahasiswa ke-8:20\n",
+      "masukkan nilai mahasiswa ke-9:10\n",
+      "masukkan nilai mahasiswa ke-10:30\n",
+      "rata-rata nilai mahasiswa yang lulus adalah 90.0\n",
+      "rata-rata nilai mahasiswa yang tidak lulus adalah 40.0\n"
+     ]
+    }
+   ],
    "source": [
-    "// Tulis jawaban no 2 disini\n"
+    "import java.util.Scanner;\n",
+    "Scanner sc = new Scanner(System.in);\n",
+    "int nilaiMHS[] =new int[10];\n",
+    "int[] lulus =new int[10];\n",
+    "int[] gagal =new int[10];\n",
+    "int l=0, g=0;\n",
+    "double rata, total;\n",
+    "for(int i=0; i<nilaiMHS.length; i++){\n",
+    "    System.out.print(\"masukkan nilai mahasiswa ke-\"+(i+1)+\":\");\n",
+    "    nilaiMHS[i]=sc.nextInt();\n",
+    "    if(nilaiMHS[i]>70){\n",
+    "        lulus[l]=nilaiMHS[i];\n",
+    "        l++;\n",
+    "    } else{\n",
+    "        gagal[g]=nilaiMHS[i];\n",
+    "        g++;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "for(int i=0; i<10; i++){\n",
+    "    total+=lulus[i];\n",
+    "}\n",
+    "\n",
+    "rata= total/l;\n",
+    "System.out.println(\"rata-rata nilai mahasiswa yang lulus adalah \"+rata);\n",
+    "total=0;\n",
+    "\n",
+    "for(int i=0; i<10; i++){\n",
+    "    total+=gagal[i];\n",
+    "}\n",
+    "rata= total/g;\n",
+    "System.out.println(\"rata-rata nilai mahasiswa yang tidak lulus adalah \"+rata);"
    ]
   },
   {
@@ -394,11 +557,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Tulis Kode program Percobaan 4 Langkah 1 di atas, disini\n"
+    "int arr[]={6,4,1,9,7,3,2,8};\n",
+    "int key =3;\n",
+    "int hasil= -1;"
    ]
   },
   {
@@ -411,11 +576,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Tulis Kode program Percobaan 4 Langkah 2 di atas, disini\n"
+    "for(int i=0; i<arr.length; i++){\n",
+    "    if(key==arr[i]){\n",
+    "        hasil=i;\n",
+    "        break;\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
@@ -428,11 +598,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key ada di array ke-5\n"
+     ]
+    }
+   ],
    "source": [
-    "// Tulis Kode program Percobaan 4 Langkah 3 di atas, disini\n"
+    "System.out.println(\"key ada di array ke-\"+hasil);"
    ]
   },
   {
@@ -444,12 +622,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "// Tulis jawaban no 1 disini\n"
+    "jika key bernilai sama dengan variabel arr ke-i, akan dilakukan break\n",
+    "yang berfungsi untuk keluar dari perulangan\n"
    ]
   },
   {
@@ -461,11 +638,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key ada di array ke--1\n"
+     ]
+    }
+   ],
    "source": [
-    "// Tulis jawaban no 2 disini\n"
+    "int arr[]={6,4,1,9,7,3,2,8};\n",
+    "int key =5;\n",
+    "int hasil= -1;\n",
+    "\n",
+    "for(int i=0; i<arr.length; i++){\n",
+    "    if(key==arr[i]){\n",
+    "        hasil=i;\n",
+    "        break;\n",
+    "    }\n",
+    "}\n",
+    "System.out.println(\"key ada di array ke-\"+hasil);\n",
+    "//variabel hasil tidak akan berubah, \n",
+    "//dan akan diprint \"key ada di array ke--1\"\n",
+    "//penyebabnya adalah karena tidak ditemukannya angka 5\n",
+    "//pada arr"
    ]
   },
   {
@@ -481,11 +680,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Tulis Kode program Percobaan 5 Langkah 1 disini\n"
+    "int[] arr = {16,4,10,90,27,3,12,28};\n",
+    "int temp = 0;"
    ]
   },
   {
@@ -498,11 +698,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Tulis Kode program Percobaan 5 Langkah 2 di atas, disini\n"
+    "for(int i =0; i<arr.length; i++){\n",
+    "    for(int j=1; j<(arr.length-i);j++){\n",
+    "        if(arr[j-1]>arr[j]){\n",
+    "            temp=arr[j-1];\n",
+    "            arr[j-1]=arr[j];\n",
+    "            arr[j]=temp;\n",
+    "        }\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
@@ -515,11 +723,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hasil pengurutan: \n",
+      "3\n",
+      "4\n",
+      "10\n",
+      "12\n",
+      "16\n",
+      "27\n",
+      "28\n",
+      "90\n"
+     ]
+    }
+   ],
    "source": [
-    "// Tulis Kode program Percobaan 5 Langkah 3 di atas, disini"
+    "System.out.println(\"hasil pengurutan: \");\n",
+    "for(int i=0; i<arr.length; i++)\n",
+    "    System.out.println(arr[i]);"
    ]
   },
   {
@@ -536,11 +762,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "/* Jawaban Soal 1 disini */\n"
+    "import java.util.Scanner;\n",
+    "Scanner sc= new Scanner(System.in);\n",
+    "int checkNum[] = new int[10];\n",
+    "int evenNum[] = new int[10];\n",
+    "int oddNum[] = new int[10];\n",
+    "int cEven, cOdd=0;\n",
+    "\n",
+    "for(int i=0;i<checkNum.length; i++){\n",
+    "    checkNum[i]=sc.nextInt();\n",
+    "}\n",
+    "\n",
+    "for(int j=0;j<checkNum.length;j++){\n",
+    "    if(checkNum[j]%2==0){\n",
+    "        evenNum[cEven]=checkNum[j];\n",
+    "        cEven++;\n",
+    "    } else{\n",
+    "        oddNum[cOdd]=checkNum[j];\n",
+    "        cOdd++;\n",
+    "    }\n",
+    "}"
    ]
   },
   {
@@ -554,12 +816,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "2\n",
+      "7\n",
+      "9\n",
+      "6\n",
+      "kebalikannya:\n",
+      "6 9 7 2 5 "
+     ]
+    }
+   ],
    "source": [
-    "/* Jawaban Soal 2 disini */\n",
-    "\n"
+    "import java.util.Scanner;\n",
+    "Scanner sc= new Scanner(System.in);\n",
+    "int a[]= new int[5];\n",
+    "int temp;\n",
+    "for(int i=0;i<a.length;i++){\n",
+    "    a[i]=sc.nextInt();\n",
+    "}\n",
+    "temp=a[0];\n",
+    "a[0]=a[4];\n",
+    "a[4]=temp;\n",
+    "\n",
+    "temp=a[1];\n",
+    "a[1]=a[3];\n",
+    "a[3]=temp;\n",
+    "System.out.println(\"kebalikannya:\");\n",
+    "\n",
+    "for(int i=0;i<a.length;i++){\n",
+    "    System.out.printf(\"%d \",a[i]);\n",
+    "}"
    ]
   },
   {
@@ -573,11 +866,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "masukkan isi array: 5\n",
+      "masukkan elemen array ke-0: 25\n",
+      "masukkan elemen array ke-1: 78\n",
+      "masukkan elemen array ke-2: 12\n",
+      "masukkan elemen array ke-3: 63\n",
+      "masukkan elemen array ke-4: 99\n",
+      "bilangan terbesar adalah 99"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "java.io.PrintStream@5dedcec5"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "/* Jawaban Soal 3 disini */\n"
+    "import java.util.Scanner;\n",
+    "Scanner sc= new Scanner(System.in);\n",
+    "System.out.print(\"masukkan isi array: \");\n",
+    "int array= sc.nextInt();\n",
+    "int Elarray[] = new int[array];\n",
+    "int terbesar=0;\n",
+    "\n",
+    "for(int i=0;i<Elarray.length;i++){\n",
+    "    System.out.printf(\"masukkan elemen array ke-%d: \",i);\n",
+    "    Elarray[i]=sc.nextInt();\n",
+    "}\n",
+    "\n",
+    "for(int j=1; j<Elarray.length; j++){\n",
+    "    if(Elarray[j]>Elarray[terbesar]){\n",
+    "        terbesar=j;\n",
+    "    }\n",
+    "}\n",
+    "System.out.printf(\"bilangan terbesar adalah %d\",Elarray[terbesar]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### "
    ]
   }
  ],
@@ -593,7 +934,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "17+35-LTS-2724"
+   "version": "17.0.1+12-LTS-39"
   }
  },
  "nbformat": 4,
